FIX: don't show the finish exam buttom, if no active exam attempt
This bug was present, if the teacher wanted to open the exam without
attempt.

--- a/exammode/templates/exammode/base.html
+++ b/exammode/templates/exammode/base.html
@@ -105,7 +105,7 @@
 						</ul>
 					</li>
 					{% endif %}
-					{% if instance %}
+					{% if instance and user.userprofile.active_exam %}
 					<li>
 						<a style="display: inline-block; vertical-align: top;" class="btn btn-success" href="{% url 'exam_end' user.userprofile.active_exam.exam_taken.id %}">
 							{% trans "Finish exam" %}
