Add missing attributes to the teacher.fi.json link
The attribute as="fetch" requires that the crossorigin attribute
is also set.

The type attribute restricts the accepted file types
(in the Accept HTTP header of the request).

teacher.fi.json contains Finnish translations to strings that are
translated in frontend JS.

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
             data-translation
             rel="preload"
             as="fetch"
+            crossorigin="anonymous"
+            type="application/json, text/javascript, */*; q=0.01"
             hreflang="fi"
             href="{{ STATIC_URL }}js-translations/teacher.fi.json"
         >
