--- a/exercise/templates/exercise/_points_progress.html
+++ b/exercise/templates/exercise/_points_progress.html
@@ -1,9 +1,13 @@
 {% load i18n %}
 <div class="progress" data-toggle="tooltip" data-html="true" data-placement="bottom"
-    title="{% trans 'Points' %}: &lt;span class='text-nowrap'&gt;{{ points }} / {{ max }}&lt;/span&gt;{% if required %} {% trans 'Required' %}: &lt;span class='text-nowrap'&gt;{{ required }}&lt;/span&gt;{% endif %}">
+    title="{% trans 'Points' %}: &lt;span class='text-nowrap'&gt;{{ points }} {% if unconfirmed_percentage %} (+{{ unconfirmed_points }}) {% endif %}/ {{ max }}&lt;/span&gt;{% if required %} {% trans 'Required' %}: &lt;span class='text-nowrap'&gt;{{ required }}&lt;/span&gt;{% endif %}">
     <div class="progress-bar progress-bar-striped progress-bar-{% if full_score %}success{% elif passed %}warning{% else %}danger{% endif %}"
-        rel="progressbar" aria-valuenow="{{ points }}" aria-valuemin="0" aria-valuemax="{{ max }}"
+        rel="progressbar" aria-valuenow="{{ points }}" aria-valuemin="0" aria-valuemax="{{ max }}" role="progressbar"
         style="width:{{ percentage }}%;"></div>
+    {% if unconfirmed_percentage %}
+    <div class="progress-bar progress-bar-striped progress-bar-info" role="progressbar" style="width:{{ unconfirmed_percentage }}%; background-color:gray;" >
+    </div>
+    {% endif %}
     {% if required_percentage %}
     <div class="required-points" style="left:{{ required_percentage }}%"></div>
     {% endif %}
