--- a/course/templates/course/_siblings.html
+++ b/course/templates/course/_siblings.html
@@ -4,7 +4,11 @@
 <nav class="row siblings">
 
     {% if next %}
-    {% module_accessible next as accessible %}
+    {% if next.submittable %}
+        {% exercise_accessible next as accessible %}
+    {% else %}
+        {% module_accessible next as accessible %}
+    {% endif %}
     {% if accessible %}
     <a href="{{ next.link }}" class="pull-right btn btn-link">
         {{ next.name|parse_localization }} &raquo;
@@ -23,7 +27,11 @@
     {% endif %}
 
     {% if previous %}
-    {% module_accessible previous as accessible %}
+    {% if previous.submittable %}
+        {% exercise_accessible previous as accessible %}
+    {% else %}
+        {% module_accessible previous as accessible %}
+    {% endif %}
     {% if accessible %}
     <a href="{{ previous.link }}" class="pull-left btn btn-link">
         &laquo; {{ previous.name|parse_localization }}
