--- a/exercise/templates/exercise/_user_toc.html
+++ b/exercise/templates/exercise/_user_toc.html
@@ -6,6 +6,7 @@
   {% for module in modules %}
   {% if module|is_listed %}
   {% module_accessible module as accessible %}
+  {% exercise_accessible module as exercise_accessible %}
   <li>
     {% if accessible %}
     <h3>
@@ -40,7 +41,7 @@
       <span class="label label-info">{% trans 'Opens' %} {{ module.opening_time }}</span> <small>&ndash; {{ module.closing_time }}</small>
     </h4>
     {% endif %}
-    {% include "exercise/_children.html" with children=module.flatted accessible=accessible %}
+    {% include "exercise/_children.html" with children=module.flatted accessible=accessible exercise_accessible=exercise_accessible %}
   </li>
   {% endif %}
   {% endfor %}
