Use AJAX in search fields
For example, in the edit course form, users are now
searched from the server API via AJAX in the
"add assistants" field. Previously, all users were
downloaded in the form HTML and users were searched
locally from the hidden option fields of a select element.
Downloading all users in the HTML significantly
increased the page size and slowed down the page
load time.

This commit adds the JavaScript code for such general
AJAX search form fields as well as some utilities.
In addition, the edit course form is modified so that
the add assistants field uses this AJAX search feature.

Grant teachers the permission to retrieve all users and
their basic information from the API. This is necessary
so that teachers may use AJAX search forms
(in order to add course assistants; user API is only
needed when the form handles users).

The new teacher permission class is implemented
inefficiently and should be improved in the future.

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,8 @@
 
         <script src="{% static 'js/translate.min.js' %}"></script>
 
+
+
         {% if is_teacher %}
         <link
             data-translation
@@ -49,7 +51,7 @@
         <link rel="stylesheet" href="{% static 'django_colortag.css' %}" />
         <script src="{% static 'js/polyfill-find.js' %}"></script>
         <script src="{% static 'js/aplus.js' %}"></script>
-
+        <script src="{% static 'js/ajax_search_select.js' %}"></script>
         {% block scripts %}
             {# Put all additional scripts inside this block. #}
         {% endblock %}
