Use max submissions with cached deviations
Fix using of tags, which previously required that StudentCache has only tagging related information.

--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -41,7 +41,7 @@
             <dd class="exercise-info-submissions">
             	{{ summary.get_submission_count }}
             	{% if exercise.max_submissions %}
-            	/ {{ exercise|max_submissions:profile }}
+            	/ {% max_submissions exercise %}
             	{% endif %}
             </dd>
 
