--- a/exercise/templates/exercise/staff/_assess_info.html
+++ b/exercise/templates/exercise/staff/_assess_info.html
@@ -56,7 +56,7 @@
 				{% trans "In total" %}
 				{{ summary.get_submission_count }}
 				{% if exercise.max_submissions %}
-					/ {{ exercise|max_submissions:submission.submitters.first }}
+					/ {{ exercise|max_submissions_for_student:submission.submitters.first }}
 					{% if is_teacher or is_assistant and submission.exercise.allow_assistant_grading %}
 						<form method="post" action="{{ submission|url:'submission-increase-max' }}" style="display:inline;" title="{% trans 'Add one extra submission for the student in this exercise.' %}">
 							{% csrf_token %}
