--- a/deviations/templates/deviations/list_submissions.html
+++ b/deviations/templates/deviations/list_submissions.html
@@ -14,11 +14,11 @@
 <br />
 <p>
 	<a class="btn btn-primary btn-xs" href="{{ instance|url:'deviations-add-submissions' }}">
-		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 		{% trans "Add new submission deviations" %}
 	</a>
 	<a class="btn btn-primary btn-xs" href="{{ instance|url:'deviations-remove-many-submissions' }}">
-		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 		{% trans "Remove submission deviations" %}
 	</a>
 </p>
