--- a/deviations/templates/deviations/override_submissions.html
+++ b/deviations/templates/deviations/override_submissions.html
@@ -42,8 +42,8 @@
 </div>
 <br/>
     <div class="form-group">
-      <div class="col-sm-10 col-sm-offset-2">
-        <button type="submit" class="btn btn-primary">{% trans 'Submit' %}</button>
+      <div class="col-sm-10">
+        <button type="submit" class="btn btn-primary">{% trans 'Confirm' %}</button>
       </div>
     </div>
 </form>
