Teachers may enroll students manually
Teachers can enroll students in a course instance even if
the enrollment time is over and the students are not allowed
to enroll themselves.

--- a/course/templates/course/staff/participants.html
+++ b/course/templates/course/staff/participants.html
@@ -23,7 +23,12 @@
       </button>
       {% endfor %}
     </p>
-
+    <p>
+    	<a class="btn btn-primary btn-xs" href="{{ instance|url:'enroll-students' }}">
+    		<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+    		{% trans "Enroll students" %}
+    	</a>
+    </p>
     <p>
         {% trans "Number of students" %} <strong id="participants-number"></strong>
         {% if is_teacher %}
