Move ajax_search_select.js out from the base template
Move the script tag for ajax_search_select.js from the base
template (templates/base.html) to the templates that really use it.

--- a/edit_course/templates/edit_course/usertagging_add.html
+++ b/edit_course/templates/edit_course/usertagging_add.html
@@ -3,7 +3,12 @@
 {% load bootstrap %}
 {% load course %}
 {% load editcourse %}
+{% load static %}
 
+{% block scripts %}
+{{ block.super }}
+<script src="{% static 'js/ajax_search_select.js' %}"></script>
+{% endblock scripts %}
 {% block editbreadcrumblist %}
 {{ block.super }}
 <li><a href="{{ instance|url:'course-tags' }}">{% trans "Tags" %}</a></li>
