--- a/course/templates/course/staff/group_edit.html
+++ b/course/templates/course/staff/group_edit.html
@@ -2,7 +2,12 @@
 {% load i18n %}
 {% load course %}
 {% load bootstrap %}
+{% load static %}
 
+{% block scripts %}
+{{ block.super }}
+<script src="{% static 'js/ajax_search_select.js' %}"></script>
+{% endblock scripts %}
 {% block title %}{% trans "Edit" %} | {% trans "Groups" %} | {{ block.super }}{% endblock %}
 {% block view_tag %}groups-edit{% endblock %}
 
