Fix the quick group selection in the edit submitters page
The template contained the user profile IDs of the group members,
but ajax_search_select.js and the new user search form fields
require user IDs.

--- a/exercise/templates/exercise/staff/edit_submitters.html
+++ b/exercise/templates/exercise/staff/edit_submitters.html
@@ -31,7 +31,7 @@
           {% for group in groups %}
           <tr>
             <td class="col-md-1">
-              <a href="#" class="btn btn-xs btn-primary select" data-profiles="{% for profile in group.members.all %}{{ profile.id }},{% endfor %}">
+              <a href="#" class="btn btn-xs btn-primary select" data-profiles="{% for profile in group.members.all %}{{ profile.user.id }},{% endfor %}">
                 {% trans "Select" %}
               </a>
             </td>
