--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -58,7 +58,7 @@
 							</p>
 						{% endif %}
 						<p>
-							<a class="btn btn-danger btn-block" role="button" href="{% url 'social:begin' 'google-oauth2' %}?next={{ next|iriencode }}">{% trans 'Login Using Google' %}</a>
+							<a class="btn btn-danger btn-block" role="button" href="{% url 'social:begin' 'google-oauth2' %}?next={{ next|iriencode }}">{% trans 'Log in using Google' %}</a>
 						</p>
 					</div>
 				</div>
@@ -68,16 +68,15 @@
 		<div class="col-sm-6 col-md-3 login-box extra-login">
 			<div class="thumbnail">
 				<div class="caption">
-					{% if login_title_text %}
-						<h3>
-							{{ login_title_text|safe }}
-						</h3>
-					{% endif %}
-					{% if login_body_text %}
-						<p>
-							{{ login_body_text|safe }}
-						</p>
-					{% endif %}
+					<h3>
+						{% trans "Local users" %}
+					</h3>
+					<p>
+						{% blocktrans trimmed %}
+							If you have been provided with credentials specifically
+							for {{ brand_name }}, use this login.
+						{% endblocktrans %}
+					</p>
 					<form method="post" role="form">
 						{% csrf_token %}
 						{#{ form|bootstrap }#}
@@ -88,7 +87,7 @@
 							<input class="form-control" type="password" id="id_password" name="password" placeholder="{% trans 'Password' %}">
 						</div>
 						<div class="form-group">
-							<button type="submit" class="btn btn-default btn-block">{{ login_button_text|safe }}</button>
+							<button type="submit" class="btn btn-default btn-block">{% trans "Log in" %}</button>
 						</div>
 					</form>
 				</div>
