--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,6 +228,33 @@ html, body {
   padding-top: 70px;
 }*/
 
+/* Skip links */
+
+.skip-link { /* This one is equally applicable to all skip links */
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    display: block;
+}
+
+.skip-link:focus {
+    position: static;
+    width: 100%;
+    min-height: 50px;
+    height: auto;
+    margin: inherit;
+    overflow: visible;
+    clip: auto;
+    padding: 15px;
+}
+
+.page-skip-link:focus {
+    min-height: 24px;
+}
+
 /* menus */
 .course-menu .nav>li>a {
     padding: 2px 2px 2px 5px;
