--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -18,7 +18,7 @@
 {% block content %}
 <div data-taggings="{{ get_taggings|join:' ' }}"  class="row">
     <div class="col-sm-2 hidden-xs">
-        <nav class="course-menu" id="main-course-menu">
+        <nav class="course-menu" id="main-course-menu" aria-label="{% trans "Course navigation" %}">
             <ul class="nav nav-pills nav-stacked">
                 {% include "course/_course_menu.html" %}
             </ul>
@@ -51,7 +51,7 @@
         </div>
         {% endcomment %}
     </div>
-    <div class="col-sm-10">
+    <div class="col-sm-10" id="course-content">
         {% block siblings %}{% endblock %}
         {% block breadcrumb %}
         <ol class="breadcrumb">
