Frontpage-sections for my and all courses
Commit divides the front page into two sections based on the
course instances of the user. Upper-section shows the courses a user
teaches or assists or is enrolled in, if any, and bottom-section
shows all the remaining ongoing courses.

A separate html-template was made for the common part of these
two sections.

Partly fixes: https://github.com/apluslms/a-plus/issues/425

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -330,7 +330,23 @@ html, body {
     width: 100%;
 }
 
-/* panels */
+.archive-link {
+    margin: 3%;
+    font-size: 18px;
+}
+
+
+/* panels */  
+.frontpage-panel {
+    margin: 3%;
+    margin-top: 30px;
+}
+
+.frontpage-panel .panel-heading {
+    border-bottom: solid 1px #eee;
+    font-weight: 500;
+}
+
 .module-panel .panel-heading {
     display: block;
 }
