Implement a consistent focus state with a polyfill
Previously we haven't had a single style for whatever has focus. This
adds a style to the most common components using a yellow colour that
isn't widely used at the moment.

We're using `!important` here as we want to ensure that whenever there
is a conflict, the focus state always wins. Since this is currently
implemented using a JS polyfill, there isn't a better, reliable way to
acheive this without needing CSS changes for every interface change.

In the future, I'm hopeful that `:focus-visible` becoming standard, and
a possible move to SASS, or another preprocessor, will enable a less
hacky-feeling solution here.

Fixes https://github.com/apluslms/a-plus/issues/546

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,6 +58,24 @@ table.src tr td.src {
   user-select: none;
 }
 
+/* FOCUS STATES - !important is needed to apply consistently to all elements */
+
+.js-focus-visible a.focus-visible,
+.js-focus-visible input.btn.focus-visible,
+.js-focus-visible button.focus-visible { /* Mostly for links in text */
+    background-color: #ffdd00 !important;
+    color: #333 !important;
+    outline: 3px solid rgba(0, 0, 0, 0) !important;
+    text-decoration: underline !important;
+}
+
+.js-focus-visible input.focus-visible, 
+.js-focus-visible select.focus-visible, 
+.js-focus-visible div.focus-visible {
+    outline: 3px solid #ffdd00 !important;
+}
+
+
 /* site footer */
 html, body {
     height: 100%;
