--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
         <link rel="stylesheet" href="{% static 'css/submission.css' %}" />
         <link rel="stylesheet" href="{% static 'django_colortag.css' %}" />
         <script src="{% static 'js/polyfill-find.js' %}"></script>
+        <script src="{% static 'js/focus-visible-polyfill.min.js' %}"></script>
         <script src="{% static 'js/aplus.js' %}"></script>
 
         {% block scripts %}
