Add default-messages for frontpage
In case there are no courses where the user is a
teacher, student or an assistant, the My courses -panel
is shown but with a default text of not having any active
courses.

Similarly, if there are no ongoing courses at all,
a default text indicating that there are no active courses
is shown.

Partly fixes: https://github.com/apluslms/a-plus/issues/425

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -294,13 +294,21 @@ html, body {
 /* the course index on the frontpage */
   
 .frontpage-panel {
-    margin: 3%;
+    margin: 1%;
     margin-top: 30px;
 }
 
 .frontpage-panel .panel-heading {
     border-bottom: solid 1px #eee;
     font-weight: 500;
+}
+
+.frontpage-panel .panel-body {
+    height: 80px;
+}
+
+.panel-default-text {
+    font-size: 18px;
 }
 
 .frontpage .card {
@@ -375,7 +383,7 @@ html, body {
 }
 
 .archive-link {
-    margin: 3%;
+    margin: 1%;
     font-size: 18px;
 }
 
