--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -12,50 +12,64 @@
 </div>
 {% endif %}
 
-{% if my_instances %}
+{% if is_logged_in %}
 	<div class="frontpage-panel">
-		<h2 class="panel-heading">{% trans "My courses"%}</h2>
-		<div class="row frontpage">
-			{% include "course/_course_cards.html" with instances=my_instances %}
-		</div>
+		<h2 class="panel-heading">{% trans "My courses" %}</h2>
+		{% if my_instances %}
+			<div class="row frontpage">
+				{% include "course/_course_cards.html" with instances=my_instances %}
+			</div>
+		{% else %}
+			<div class="panel-body">
+				<p class="panel-default-text">
+					{% trans "You do not currently have any active courses." %}
+				</p>
+			</div>
+		{% endif %}
 	</div>
 {% endif %}
 
-{% if all_instances %}
-	<div class="frontpage-panel">
-		<h2 class="panel-heading">{% trans "All ongoing courses"%}</h2>
-		<div class="row frontpage">
-			{% site_advert as advert %}
-			{% if advert %}
-				<div class="col-sm-6 col-md-4 col-lg-3">
-					<a href="{{ advert.href }}" target="_blank">
-						<div class="card advert-card">
-							<div class="advert-image" aria-hidden="true">
-								{% if advert.image %}
-									<img class="card-img-top" src="{{ advert.image }}" alt="" />
-								{% else %}
-									<div class="card-img-top">
-										<i class="glyphicon glyphicon-comment"></i>
-									</div>
-								{% endif %}
-							</div>
-							<div class="card-body">
-								<h3 class="card-title">{{ advert.title }}</h3>
-								<p class="card-text">{{ advert.text|safe }}</p>
-							</div>
+<div class="frontpage-panel">
+	<h2 class="panel-heading">{% trans "All ongoing courses" %}</h2>
+	<div class="row frontpage">
+		{% site_advert as advert %}
+		{% if advert %}
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<a href="{{ advert.href }}" target="_blank">
+					<div class="card advert-card">
+						<div class="advert-image" aria-hidden="true">
+							{% if advert.image %}
+								<img class="card-img-top" src="{{ advert.image }}" alt="" />
+							{% else %}
+								<div class="card-img-top">
+									<i class="glyphicon glyphicon-comment"></i>
+								</div>
+							{% endif %}
 						</div>
-					</a>
-				</div>
-			{% endif %}
+						<div class="card-body">
+							<h3 class="card-title">{{ advert.title }}</h3>
+							<p class="card-text">{{ advert.text|safe }}</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		{% endif %}
+		{% if all_instances %}
 			{% include "course/_course_cards.html" with instances=all_instances %}
-		</div>
+		{% endif %}
 	</div>
-{% endif %}
-
+	{% if not all_instances and not siteadvert %}
+		<div class="panel-body">
+			<p class="panel-default-text">
+				{% trans "There are currently no active courses." %}
+			</p>
+		</div>
+	{% endif %}
+</div>
 
 <p class="archive-link">
 	{% url 'archive' as url %}
-	{% blocktrans with url=url %}
+	{% blocktrans trimmed with url=url %}
 	Old courses can be found at the <a href="{{ url }}">course archive</a>.
 	{% endblocktrans %}
 </p>
