Change UI of the local user login form
* Switch to use django form for the local user login.
It adds labels to login form to improve accessibility and also
provides error handling. Update extra_logins.js so that if logins
have error messages, extra logins are not hidden.

* Change the color of the button so it looks more like a button.

Fixes https://github.com/apluslms/a-plus/issues/582

Switch local user login to use django form

--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -79,15 +79,9 @@
 					</p>
 					<form method="post" role="form">
 						{% csrf_token %}
-						{#{ form|bootstrap }#}
+						{{ form|bootstrap }}
 						<div class="form-group">
-							<input class="form-control" type="text" id="id_username" name="username" maxlength="254" placeholder="{% trans 'Username' %}">
-						</div>
-						<div class="form-group">
-							<input class="form-control" type="password" id="id_password" name="password" placeholder="{% trans 'Password' %}">
-						</div>
-						<div class="form-group">
-							<button type="submit" class="btn btn-default btn-block">{% trans "Log in" %}</button>
+							<button type="submit" class="btn btn-info btn-block">{% trans "Log in" %}</button>
 						</div>
 					</form>
 				</div>
