Remove folding of the course news -content
Previously all the content-text of course news
was folded and only visible with a click of a
button. Now the folding has been removed and
the appearance of the news items modified so that
news would be more easily noticeable.

Also course news folding -button is made more
noticeable and accessible.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -403,9 +403,39 @@ html, body {
 .module-panel table {
     margin: 0;
 }
-.news-panel .list-group-item-text {
-  padding: 10px;
+
+/* course news */
+.news-panel {
+    margin-bottom: 30px;
 }
+
+.news-panel .panel-heading {
+    color: #fff;
+    background-color: #337ab7;
+}
+
+.news-panel .list-group-item-heading {
+    padding-bottom: 10px;
+    font-weight: bold;
+}
+
+.news-panel .list-group-item,
+.news-panel .folding-list-group-item {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+}
+
+.news-panel .folding-list-group-item {
+    color: #337ab7;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.news-panel .folding-list-group-item:hover {
+    background-color: #eee;
+}
+
 .news-panel .list-group-item-text *:last-child {
   margin-bottom: 0;
 }
