--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -17,30 +17,29 @@
 {% if news %}
 <div class="panel panel-default news-panel">
   <div class="panel-heading">
-    <h4 class="panel-title">{% trans "Course news" %}</h4>
+    <h3 class="panel-title">{% trans "Course news" %}</h3>
   </div>
   <div class="list-group">
     {% for item in news %}
-    <a class="list-group-item{% if item.collapsed %} collapsed{% endif %}" href="#news{{ item.id }}" data-toggle="collapse" role="button" aria-controls="news{{ item.id }}" aria-expanded="{% if item.collapsed %}false{% else %}true{% endif %}">
+    <div class="list-group-item">
       <h4 class="list-group-item-heading">
-        <span class="caret"></span>
         {{ item.title|safe }} <small>{{ item.publish }}</small>
         {% if not item|is_published:now %}<small><span class="label label-default">{% trans "Appears later" %}</span></small>{% endif %}
         {% if is_course_staff %}<small><span class="label label-default">{{ item.audience|news_audience }}</span></small>{% endif %}
       </h4>
-    </a>
-    <div class="list-group-item-text collapse{% if not item.collapsed %} in{% endif %}" id="news{{ item.id }}">
-      {{ item.body|safe }}
+      <div class="list-group-item-text">
+        {{ item.body|safe }}
+      </div>
     </div>
     {% if item.begin_more %}
-    <a class="list-group-item" href="#more-news" data-toggle="collapse" role="button" aria-controls="more-news" aria-expanded="false">
-      {% trans "Show more" %}
+    <a class="folding-list-group-item collapsed" href="#more-news" data-toggle="collapse" role="button" aria-controls="more-news" aria-expanded="false">
+        {% trans "Show older" %} <span class="caret"></span>
     </a>
     <div class="collapse" id="more-news">
     {% endif %}
     {% endfor %}
     {% if more > 0 and news|length > more %}
-    </div>
+      </div>
     {% endif %}
   </div>
 </div>
