Add possibility to pin items to course news
This has been in order to add possibilities for
teachers to set which items are relevant and showing
to the students also further on.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -412,6 +412,7 @@ html, body {
 .news-panel .panel-heading {
     color: #fff;
     background-color: #337ab7;
+    border-color: #337ab7;
 }
 
 .news-panel .list-group-item-heading {
@@ -420,10 +421,16 @@ html, body {
 }
 
 .news-panel .list-group-item,
+.news-panel .pinned-list-group-item,
 .news-panel .folding-list-group-item {
     position: relative;
     display: block;
     padding: 10px 15px;
+}
+
+.news-panel .pinned-list-group-item {
+    border-left: 2px solid #337ab7;
+    border-bottom: 1px solid #ccc;
 }
 
 .news-panel .folding-list-group-item {
@@ -437,7 +444,7 @@ html, body {
 }
 
 .news-panel .list-group-item-text *:last-child {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 /* point progress and badges */
