--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -21,11 +21,12 @@
   </div>
   <div class="list-group">
     {% for item in news %}
-    <div class="list-group-item">
+    <div class="{% if item.pin %}pinned-{% endif %}list-group-item">
       <h4 class="list-group-item-heading">
         {{ item.title|safe }} <small>{{ item.publish }}</small>
         {% if not item|is_published:now %}<small><span class="label label-default">{% trans "Appears later" %}</span></small>{% endif %}
         {% if is_course_staff %}<small><span class="label label-default">{{ item.audience|news_audience }}</span></small>{% endif %}
+        {% if item.pin %}<small><span class="glyphicon glyphicon-pushpin"></span></small>{% endif %}
       </h4>
       <div class="list-group-item-text">
         {{ item.body|safe }}
