Clarify folding-logic and headings of news items
- Simplifies the folding logic of news so that
no additional attribute is needed for each news item.
- Clarifies the headings of news items, by separating
the h4-tag and other details into their own, semantically
correct sections.
- Fixes the indendation as the changes to the user_news.html
are major.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -409,12 +409,12 @@ html, body {
     margin-bottom: 30px;
 }
 
-.future-instance {
+.news-panel .future-instance {
     color: #c0322d;
     background-color: #fff;
 }
 
-.current-instance {
+.news-panel .current-instance {
     color: #333;
     background-color: #fff;
 }
@@ -426,9 +426,19 @@ html, body {
 }
 
 .news-panel .list-group-item-heading {
-    padding-top: 3px;
+    padding-top: 5px;
     padding-bottom: 10px;
+}
+
+.news-panel .list-group-item-title {
     font-weight: bold;
+    margin: 0px;
+    display: inline-block;
+}
+
+.news-panel .list-group-item-details {
+    font-size: 0.9em;
+    display: inline-block;
 }
 
 .news-panel .list-group-item,
