--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -3,37 +3,49 @@
 
 
 {% if news %}
-<div class="panel panel-default news-panel">
-  <div class="panel-heading">
-    <h3 class="panel-title">{% trans "Course news" %}</h3>
-  </div>
-  <div class="list-group">
-    {% for item in news %}
-    <div class="{% if item.pin %}pinned-{% endif %}list-group-item">
-      <h4 class="list-group-item-heading">
-        {{ item.title|safe }}
-        {% if not item|is_published:now %}
-          <small class="future-instance">{% trans "Published on" %}: {{ item.publish }}</small>
-        {% else %}
-          <small class="current-instance">{{ item.publish }}</small>
-        {% endif %}
-        {% if is_course_staff %}<small><span class="label label-primary">{{ item.audience|news_audience }}</span></small>{% endif %}
-        {% if item.pin %}<small><span class="glyphicon glyphicon-pushpin"></span></small>{% endif %}
-      </h4>
-      <div class="list-group-item-text">
-        {{ item.body|safe }}
-      </div>
-    </div>
-    {% if item.begin_more %}
-    <a class="folding-list-group-item collapsed" href="#more-news" data-toggle="collapse" role="button" aria-controls="more-news" aria-expanded="false">
-        {% trans "Show older" %} <span class="caret"></span>
-    </a>
-    <div class="collapse" id="more-news">
-    {% endif %}
-    {% endfor %}
-    {% if more > 0 and news|length > more %}
-      </div>
-    {% endif %}
-  </div>
-</div>
+	<div class="panel panel-default news-panel">
+		<div class="panel-heading">
+			<h3 class="panel-title">{% trans "Course news" %}</h3>
+		</div>
+		<div class="list-group">
+			{% for item in news %}
+				<div class="{% if item.pin %}pinned-{% endif %}list-group-item">
+					{% if item.pin %}
+						<span class="sr-only">{% trans "Pinned news item on top of the list" %}</span>
+					{% endif %}
+					<div class="list-group-item-heading">
+						<h4 class="list-group-item-title">
+							{{ item.title|safe }}
+						</h4>
+						<div class="list-group-item-details">
+							{% if not item|is_published:now %}
+								<span class="future-instance">{% trans "Published on" %}: <time>{{ item.publish }}</time></span>
+							{% else %}
+								<time class="current-instance">{{ item.publish }}</time>
+							{% endif %}
+							{% if is_course_staff %}
+								<span class="label label-primary">{{ item.audience|news_audience }}</span>
+							{% endif %}
+							{% if item.pin %}
+								<span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span>
+							{% endif %}
+						</div>
+					</div>
+					<p class="list-group-item-text">
+						{{ item.body|safe }}
+					</p>
+				</div>
+				{# If a limit for folding news (more) is set, this creates the folding section #}
+				{% if forloop.counter == more and news|length > more and more > 0 %}
+					<a class="folding-list-group-item collapsed" href="#more-news" data-toggle="collapse" role="button" aria-controls="more-news" aria-expanded="false">
+						{% trans "Show older" %} <span class="caret"></span>
+					</a>
+					<div class="collapse" id="more-news">{# start of collapse.div #}
+				{% endif %}
+				{% if forloop.last and news|length > more and more > 0 %}
+					</div>{# end of collapse.div #}
+				{% endif %}
+			{% endfor %}
+		</div>
+	</div>
 {% endif %}
