WIP custom colours

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,8 +3,9 @@
 
 // First set some Bootstrap variables
 
-@use 'lib/bootstrap/bootstrap';// with(
-// Custom varibles go here.
-//);
+@use 'lib/bootstrap/bootstrap' with(
+  $brand-primary: red,
+);
 
 @use 'legacy/main';
+
