--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -26,7 +26,7 @@
 				<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="lang-dropdown">
 					{% for language in instance.language|list_unselected %}
 					<li>
-						<form action="{% url 'set_language' %}" method="post">
+						<form action="{% url 'set-user-language' %}" method="post">
 							{% csrf_token %}
 							<input name="next" type="hidden" value="{{ request.get_full_path }}" />
 							<input name="language" type="hidden" value="{{ language }}" />
